Get views working correctly again.
Use content_for(:key) instead of yield(:key) for partials layouts
Applied 90% width style to login text fields which were overflowing

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -72,3 +72,7 @@ form {
   margin:1em 3em;
   padding:1em;
 }
+
+div#loginFormDiv input {
+  width: 90%;
+}
